fix quebra de linha com overlap

--- a/src/containers/skills/Skills.scss
+++ b/src/containers/skills/Skills.scss
@@ -23,6 +23,8 @@
 .skills-heading {
   font-size: 56px;
   font-weight: 400;
+  line-height: 1.2;
+  word-wrap: break-word;
 }
 .subTitle {
   color: $subTitle;
